--- a/CIFCAMAIN.ipynb
+++ b/CIFCAMAIN.ipynb
@@ -2,13 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting streamlit\n",
+      "  Downloading streamlit-1.24.1-py2.py3-none-any.whl (8.9 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting altair<6,>=4.0 (from streamlit)\n",
+      "  Downloading altair-5.0.1-py3-none-any.whl (471 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m471.5/471.5 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting blinker<2,>=1.0.0 (from streamlit)\n",
+      "  Downloading blinker-1.6.2-py3-none-any.whl (13 kB)\n",
+      "Collecting cachetools<6,>=4.0 (from streamlit)\n",
+      "  Downloading cachetools-5.3.1-py3-none-any.whl (9.3 kB)\n",
+      "Requirement already satisfied: click<9,>=7.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (8.1.3)\n",
+      "Requirement already satisfied: importlib-metadata<7,>=1.4 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (6.0.0)\n",
+      "Requirement already satisfied: numpy<2,>=1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (1.23.5)\n",
+      "Requirement already satisfied: packaging<24,>=14.1 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from streamlit) (23.0)\n",
+      "Requirement already satisfied: pandas<3,>=0.25 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (1.5.3)\n",
+      "Requirement already satisfied: pillow<10,>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (9.4.0)\n",
+      "Collecting protobuf<5,>=3.20 (from streamlit)\n",
+      "  Downloading protobuf-4.23.4-cp37-abi3-macosx_10_9_universal2.whl (400 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m400.3/400.3 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pyarrow>=4.0 (from streamlit)\n",
+      "  Downloading pyarrow-12.0.1-cp39-cp39-macosx_10_14_x86_64.whl (24.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.8/24.8 MB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pympler<2,>=0.9 (from streamlit)\n",
+      "  Downloading Pympler-1.0.1-py3-none-any.whl (164 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m164.8/164.8 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil<3,>=2 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from streamlit) (2.8.2)\n",
+      "Requirement already satisfied: requests<3,>=2.4 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (2.28.2)\n",
+      "Collecting rich<14,>=10.11.0 (from streamlit)\n",
+      "  Downloading rich-13.4.2-py3-none-any.whl (239 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m239.4/239.4 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: tenacity<9,>=8.0.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (8.2.1)\n",
+      "Collecting toml<2 (from streamlit)\n",
+      "  Downloading toml-0.10.2-py2.py3-none-any.whl (16 kB)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.0.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from streamlit) (4.5.0)\n",
+      "Collecting tzlocal<5,>=1.1 (from streamlit)\n",
+      "  Downloading tzlocal-4.3.1-py3-none-any.whl (20 kB)\n",
+      "Collecting validators<1,>=0.2 (from streamlit)\n",
+      "  Downloading validators-0.20.0.tar.gz (30 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting gitpython!=3.1.19,<4,>=3 (from streamlit)\n",
+      "  Downloading GitPython-3.1.32-py3-none-any.whl (188 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m188.5/188.5 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting pydeck<1,>=0.1.dev5 (from streamlit)\n",
+      "  Downloading pydeck-0.8.1b0-py2.py3-none-any.whl (4.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.8/4.8 MB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hRequirement already satisfied: tornado<7,>=6.0.3 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from streamlit) (6.2)\n",
+      "Requirement already satisfied: jinja2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from altair<6,>=4.0->streamlit) (3.1.2)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from altair<6,>=4.0->streamlit) (4.17.3)\n",
+      "Collecting toolz (from altair<6,>=4.0->streamlit)\n",
+      "  Downloading toolz-0.12.0-py3-none-any.whl (55 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.8/55.8 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting gitdb<5,>=4.0.1 (from gitpython!=3.1.19,<4,>=3->streamlit)\n",
+      "  Downloading gitdb-4.0.10-py3-none-any.whl (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.7/62.7 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: zipp>=0.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from importlib-metadata<7,>=1.4->streamlit) (3.13.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas<3,>=0.25->streamlit) (2022.7.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from python-dateutil<3,>=2->streamlit) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from requests<3,>=2.4->streamlit) (3.0.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from requests<3,>=2.4->streamlit) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from requests<3,>=2.4->streamlit) (1.26.14)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from requests<3,>=2.4->streamlit) (2021.5.30)\n",
+      "Collecting markdown-it-py>=2.2.0 (from rich<14,>=10.11.0->streamlit)\n",
+      "  Downloading markdown_it_py-3.0.0-py3-none-any.whl (87 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m87.5/87.5 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from rich<14,>=10.11.0->streamlit) (2.14.0)\n",
+      "Collecting pytz-deprecation-shim (from tzlocal<5,>=1.1->streamlit)\n",
+      "  Downloading pytz_deprecation_shim-0.1.0.post0-py2.py3-none-any.whl (15 kB)\n",
+      "Requirement already satisfied: decorator>=3.4.0 in /Users/jedtaylordlmdd/Library/Python/3.9/lib/python/site-packages (from validators<1,>=0.2->streamlit) (5.1.1)\n",
+      "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3->streamlit)\n",
+      "  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from jinja2->altair<6,>=4.0->streamlit) (2.1.2)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (22.2.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.19.3)\n",
+      "Collecting mdurl~=0.1 (from markdown-it-py>=2.2.0->rich<14,>=10.11.0->streamlit)\n",
+      "  Downloading mdurl-0.1.2-py3-none-any.whl (10.0 kB)\n",
+      "Collecting tzdata (from pytz-deprecation-shim->tzlocal<5,>=1.1->streamlit)\n",
+      "  Downloading tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m341.8/341.8 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hBuilding wheels for collected packages: validators\n",
+      "  Building wheel for validators (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for validators: filename=validators-0.20.0-py3-none-any.whl size=19579 sha256=20caf3511c3d3b0831c6531dd83c539949fe5d6397fc89d28e25fb133fe4c035\n",
+      "  Stored in directory: /Users/jedtaylordlmdd/Library/Caches/pip/wheels/2d/f0/a8/1094fca7a7e5d0d12ff56e0c64675d72aa5cc81a5fc200e849\n",
+      "Successfully built validators\n",
+      "Installing collected packages: validators, tzdata, toolz, toml, smmap, pympler, pyarrow, protobuf, mdurl, cachetools, blinker, pytz-deprecation-shim, pydeck, markdown-it-py, gitdb, tzlocal, rich, gitpython, altair, streamlit\n",
+      "Successfully installed altair-5.0.1 blinker-1.6.2 cachetools-5.3.1 gitdb-4.0.10 gitpython-3.1.32 markdown-it-py-3.0.0 mdurl-0.1.2 protobuf-4.23.4 pyarrow-12.0.1 pydeck-0.8.1b0 pympler-1.0.1 pytz-deprecation-shim-0.1.0.post0 rich-13.4.2 smmap-5.0.0 streamlit-1.24.1 toml-0.10.2 toolz-0.12.0 tzdata-2023.3 tzlocal-4.3.1 validators-0.20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import os \n",
+    "\n",
+    "import streamlit as st \n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain, SequentialChain \n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.utilities import WikipediaAPIWrapper "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
